2008-09-18  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/opt.c :
	  Ignore multiple consecutive colons in host list supplied to -w and
	  other target host input methods. Thus foo::bar is no longer treated
	  as rcmd_type = foo, and target host = :bar. Instead the target host
	  is just foo::bar. This behavior is probably more correct and least
	  surprising to users (who probably rarely use the rcmd_type:hosts
	  syntax). Plus, there is at least one user making use of proxy::hosts
	  to handle automatic proxying of ssh connections.

2008-09-03  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/xpopen.c : glibc 2.8 no longer defines ARG_MAX.
	  Use sysconf (_SC_ARG_MAX) instead if it is available.
	  Fix provided by Tom 'spot' Callaway via sf.net.

2008-08-06  Mark Grondona <mgrondona@llnl.gov>

	* src/common/hostlist.c : 
	  Update to latest hostlist code from LSD-Tools.

	* src/pdsh/privsep.c (privsep_server) :
	  Fix handling of read() return code as found by Coverity.

2008-06-13  Mark Grondona <mgrondona@llnl.gov>

	* src/common/hostlist.h : 
	  Update to latest hostlist.h from LSD-Tools project.
	  This version includes unistd.h (patch by Ashley Pittman).
	  Issue was rediscovered Jeff Quaintance when I forgot to
	  include Ashley's patch in the last version of pdsh. D'oh!

2008-04-01  Mark Grondona <mgrondona@llnl.gov>

	* scripts/dshbak : Allow for ':' in pdsh output lines. 
	  Thanks to Ashley Pittman for the patch.

2008-03-19  Mark Grondona <mgrondona@llnl.gov>

	* : tag pdsh-2.16

	* scripts/dshbak : 
	  Do not include leading space in output lines (which is added
	  by pdsh) to data printed by dshbak. Thanks to Ashley Pittman
	  for the patch.

	* scripts/dshbak :
	  Remove -s (sort) option to dshbak. Always sort output instead.

2008-03-11  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/opt.c : 
	  When specifying rcmd_type via -w (i.e. [rcmd_type:][user@]host)
	  have rcmd_type apply across all hosts until the next rcmd